--- a/my-slider/package.json
+++ b/my-slider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-webpack",
+  "name": "webpack-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -36,6 +36,7 @@
   "dependencies": {
     "autoprefixer": "^8.2.0",
     "postcss-flexbugs-fixes": "^3.3.0",
-    "postcss-loader": "^2.1.3"
+    "postcss-loader": "^2.1.3",
+    "url-loader": "^1.0.1"
   }
 }
